Fixed Scheduling page to scale properly on mobile devices

--- a/src/components/Stylesheets/Scheduling.module.css
+++ b/src/components/Stylesheets/Scheduling.module.css
@@ -25,6 +25,7 @@
     .tableContainer {
         width: 90%;
         height: 640px;
+        height: auto;
         margin: 0 auto;
         background-color: white;
         border: 2px solid#4896ac;
@@ -205,8 +206,17 @@
 
 /**/
 
-/* Responsiveness */
+/* MOBILE VIEW */
 @media (max-width: 768px) {
+    .scheduleTable th {
+        font-size: 2vw;
+    }
+
+    .tableContainer {
+        height: auto;
+    }
+
+
     h1 {
         font-size: 3vw;
     }
